[gd_scene load_steps=11 format=3 uid="uid://u8fusg8tlq4e"]

[ext_resource type="Script" uid="uid://cijovywqo4vb4" path="res://Scenes/Entities/Ferrets/bandito.gd" id="1_k7xoa"]
[ext_resource type="PackedScene" uid="uid://bt23fe706ymcp" path="res://Assets/Characters/ferret_Bandito.fbx" id="2_44xr0"]
[ext_resource type="Texture2D" uid="uid://bb656xbhvgdp3" path="res://Assets/Objects/WarPaint.png" id="3_ohynm"]
[ext_resource type="PackedScene" uid="uid://dgu3yqbwbpdtx" path="res://Scenes/Pie/Cake.tscn" id="4_k7xoa"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3o06v"]
radius = 0.25
height = 1.625

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k7xoa"]
albedo_texture = ExtResource("3_ohynm")

[sub_resource type="SphereShape3D" id="SphereShape3D_ohynm"]
radius = 0.3

[sub_resource type="SphereShape3D" id="SphereShape3D_3sybv"]
radius = 0.3

[sub_resource type="SphereShape3D" id="SphereShape3D_xmnmm"]
radius = 20.0

[sub_resource type="BoxShape3D" id="BoxShape3D_44xr0"]
size = Vector3(0.6, 1.2, 2.1000001)

[node name="Bandito" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_k7xoa")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.55, 0, 0, 0, 0.55, 0, 0, 0, 0.55, 0, 0.445, 0.025)
shape = SubResource("CapsuleShape3D_3o06v")

[node name="ferret_Bandito" parent="." instance=ExtResource("2_44xr0")]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0, 0, 0)

[node name="Skeleton3D" parent="ferret_Bandito/Armature" index="0"]
bones/0/rotation = Quaternion(0.004963114, -0.7070896, -0.004963208, 0.7070891)
bones/1/rotation = Quaternion(-0.0477637, 0.0025912914, -0.38492122, 0.92170906)
bones/2/rotation = Quaternion(0.05684322, 0.018254308, -0.14500175, 0.9876285)
bones/3/rotation = Quaternion(0.025353624, -0.004159394, -0.009337678, 0.99962634)
bones/4/rotation = Quaternion(-0.03985203, 0.0009361623, -0.05539718, 0.9976684)
bones/7/rotation = Quaternion(-0.019265564, -0.23282744, 0.775884, 0.5860242)
bones/8/rotation = Quaternion(-0.16914484, -0.044012584, -0.57721984, 0.79766554)
bones/10/rotation = Quaternion(0.7751574, -0.564964, -0.18274705, 0.21575513)
bones/11/rotation = Quaternion(-0.27029228, 0.30378944, 0.6667925, 0.6245333)
bones/13/rotation = Quaternion(0.6832677, 0.14238535, 0.69208, -0.18411116)
bones/14/rotation = Quaternion(0.14654046, -0.050112706, 0.08393238, 0.9843627)
bones/15/rotation = Quaternion(-0.16922122, -0.013402896, -0.041087724, 0.9846301)
bones/18/rotation = Quaternion(0.061177492, 0.83577114, -0.17071709, -0.5182661)
bones/21/rotation = Quaternion(-0.061176866, 0.8357711, -0.17071763, 0.51826596)
bones/25/position = Vector3(0.017714756, 0.04297057, 0.043076493)
bones/25/rotation = Quaternion(-0.4639864, -0.051468067, 0.8812499, -0.07393442)
bones/27/position = Vector3(0.009534964, -0.04289753, 0.009959646)
bones/27/rotation = Quaternion(-0.7071044, 0.0016462388, 0.70710546, -0.0016088587)
bones/33/position = Vector3(-0.003652259, 0.016794838, 0.02291234)
bones/35/position = Vector3(-0.0016464461, 0.039712608, 0.052754927)
bones/35/rotation = Quaternion(0.8812496, 0.07393442, 0.4639869, -0.051468138)
bones/37/position = Vector3(-0.009534964, -0.04289753, 0.009959646)

[node name="Mask" parent="ferret_Bandito/Armature/Skeleton3D" index="1"]
material_override = SubResource("StandardMaterial3D_k7xoa")

[node name="Head Hurtbox" type="StaticBody3D" parent="."]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head Hurtbox"]
shape = SubResource("SphereShape3D_ohynm")

[node name="Mask Hurtbox" type="RigidBody3D" parent="."]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 9
freeze = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Mask Hurtbox"]
shape = SubResource("SphereShape3D_3sybv")

[node name="Chase Zone" type="Area3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Chase Zone"]
shape = SubResource("SphereShape3D_xmnmm")

[node name="Celebrate Zone" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Celebrate Zone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1175871e-07, 0.6, 0.15000007)
shape = SubResource("BoxShape3D_44xr0")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
unique_name_in_owner = true
path_height_offset = 0.5
debug_use_custom = true
debug_path_custom_color = Color(0, 1, 0, 1)

[node name="Damage Phase Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Cake" parent="." instance=ExtResource("4_k7xoa")]
transform = Transform3D(-1.7484556e-08, 0, -0.4, 0, 0.4, 0, 0.4, 0, -1.7484556e-08, 0, 0.5, 0.8)
visible = false

[node name="Area3D" parent="Cake" index="3"]
monitoring = false

[connection signal="body_entered" from="Chase Zone" to="." method="_on_chase_zone_body_entered"]
[connection signal="body_entered" from="Celebrate Zone" to="." method="_on_celebrate_zone_body_entered"]
[connection signal="body_exited" from="Celebrate Zone" to="." method="_on_celebrate_zone_body_exited"]
[connection signal="timeout" from="Damage Phase Timer" to="." method="_on_damage_phase_timer_timeout"]

[editable path="ferret_Bandito"]
[editable path="Cake"]
